Bug 85004 - Writer: Crash when clicking the Reminder icon on the Navigation toolbar
Summary: Writer: Crash when clicking the Reminder icon on the Navigation toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.5.0 target:4.4.1
Keywords:
: 88948 89272 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-14 14:34 UTC by sophie
Modified: 2015-02-11 22:16 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Linux memcheck log (124.66 KB, text/plain)
2014-10-26 11:46 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sophie 2014-10-14 14:34:19 UTC
Steps to reproduce:
- Display the find toolbar Writer
- insert some text in the document
- click the Navigate by button
- select Reminder in the navigation bar
- add some Reminders in the document
- click again the Navigate by button to open the navigation bar
- click on the reminder icon
--> Writer crashes. Note that it didn't crashes each time but most of the time. 
Note also that the icon is not selected each time when you click on it, often the Heading icon get the focus instead. Sophie
Comment 1 Caolán McNamara 2014-10-14 15:25:06 UTC
I wonder if this is os-specific somehow. Seems to work fine for me on Linux right now.
Comment 2 sophie 2014-10-14 15:50:39 UTC
I'm also on Linux, Ubuntu currently but will try with Debian. The build is:
Version: 4.4.0.0.alpha0+
Build ID: 15decb9b323029e764a89a78793862c8af74cbac
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-13_21:48:27.

Testing more, I think the problem with the icon selection is causing the crash. Without any other action than opening the Navigate toolbar, if I click the Reminder icon, the Heading icon get selected, then it crashes.
Comment 3 sophie 2014-10-14 16:43:54 UTC
Just tested under Debian 6 and latest master on tinderbox @45 and get the same crash, clicking the icon is enough to reproduce the crash.  Sophie
Comment 4 Joel Madero 2014-10-23 01:30:52 UTC
Ubuntu 14.04 x64
Master built two days ago.

No crash - assuming I'm not following instructions right. 

- add some Reminders in the document

I've never added reminders, should I see some result when I do this? Is this the same as "Set Reminder."?
Comment 5 sophie 2014-10-23 08:02:01 UTC
(In reply to Joel Madero from comment #4)
> Ubuntu 14.04 x64
> Master built two days ago.
> 
> No crash - assuming I'm not following instructions right. 
> 
> - add some Reminders in the document
> 
> I've never added reminders, should I see some result when I do this? Is this
> the same as "Set Reminder."?

Yes, it's the same. There is no visible mark when you set them. The crash still happens for me, I think it's a problem between the Header and Reminder icons.
Comment 6 Buovjaga 2014-10-24 13:38:48 UTC
Unable to repro.
Version: 4.4.0.0.alpha1+
Build ID: 0a82645c360158f9cc0fdabe2a52f1ff8f981bed
TinderBox: Win-x86@39, Branch:master, Time: 2014-10-24_06:59:23
Comment 7 Matthew Francis 2014-10-26 11:46:45 UTC
Created attachment 108444 [details]
Linux memcheck log

Reproduced under memcheck - see attached log which includes a crash backtrace and some surrounding invalid reads

-> NEW
Comment 8 Alex Jordan 2014-10-26 19:55:55 UTC
Matthew: I assume you meant to set this to NEW?
Comment 9 Buovjaga 2015-01-07 15:44:09 UTC
Unable to repro on Linux.

Ubuntu 14.10 64-bit Version: 4.5.0.0.alpha0+
Build ID: f92183833fa569006602ac7e93c906d2094e0d4d
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-12-14_00:21:45
Comment 11 Caolán McNamara 2015-02-04 21:10:55 UTC
*** Bug 88948 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2015-02-09 10:46:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e33e78a6fce0faf86f944cfc13726d4f132ef4e5&h=libreoffice-4-4

Resolves: tdf#85004 Crash when clicking the Reminder icon...

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 serdar 2015-02-11 22:16:01 UTC
*** Bug 89272 has been marked as a duplicate of this bug. ***