Resolves: tdf#85004 Crash when clicking the Reminder icon...

on the Navigation toolbar

the Parent window isn't a SwScrollNaviPopup anymore

(cherry picked from commit 535f34bba60e06d390a6f3802072b16a9841bc4e)

Conflicts:
	sw/source/uibase/ribbar/workctrl.cxx

Change-Id: I5c539d125aac28bfee0beb842ff2df001e19c945